--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,21 +53,12 @@
                 android:background="@android:color/white">
 
                 <com.google.android.material.tabs.TabItem
-                    android:id="@+id/Home"
-                    android:text="Feed"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    />
-                <com.google.android.material.tabs.TabItem
-                    android:id="@+id/Events"
-                    android:text="Discover"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-                <com.google.android.material.tabs.TabItem
                     android:id="@+id/sermonsF"
                     android:text="sermon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+
+
 
                 <com.google.android.material.tabs.TabItem
                     android:id="@+id/tithe"
@@ -76,10 +67,27 @@
                     android:layout_height="wrap_content" />
 
                 <com.google.android.material.tabs.TabItem
+                    android:id="@+id/Home"
+                    android:text="Events"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <com.google.android.material.tabs.TabItem
+                    android:id="@+id/Events"
+                    android:text="Discover"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <com.google.android.material.tabs.TabItem
                     android:id="@+id/hymnal"
                     android:text="Hymnal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
+
+
+
+
+
 
             </com.google.android.material.tabs.TabLayout>
 
