--- a/app/src/main/res/layout/activity_view_song.xml
+++ b/app/src/main/res/layout/activity_view_song.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
-        android:textSize="16sp"
+        android:textSize="25sp"
         android:textColor="@color/colorAccent"
         android:id="@+id/title"/>
 
@@ -29,7 +29,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
         android:lineSpacingExtra="2dp"
-        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textColor="@android:color/white"
         android:id="@+id/description"/>
 
 
