--- a/app/src/main/res/layout/fragment_hymnal.xml
+++ b/app/src/main/res/layout/fragment_hymnal.xml
@@ -32,6 +32,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
+        android:background="@android:color/darker_gray"
         android:layout_height="match_parent"
         android:id="@+id/song"/>
 
