--- a/app/src/main/res/layout/hymnal_item.xml
+++ b/app/src/main/res/layout/hymnal_item.xml
@@ -2,8 +2,7 @@
 <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-    app:cardCornerRadius="4dp"
+    android:layout_marginBottom="1dp"
     android:id="@+id/mCardView"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
